Anpassung in Lagerview - vereinfachung von collect auf toList